==> zephyrproject-rtos/hal_stm32/stm32cube/stm32c5xx/drivers/hal/stm32c5xx_hal.c <==
#include "stm32_hal.h"
#include "stm32c5xx_ll_bus.h"
#include "stm32c5xx_ll_flash.h"
#define AHB1_GRP1_PERIPH_RESET (LL_AHB1_GRP1_PERIPH_ALL & ~(LL_AHB1_GRP1_PERIPH_SRAM1 \
                                                            | LL_AHB1_GRP1_PERIPH_SRAM2 \
                                                            | LL_AHB1_GRP1_PERIPH_FLASH))
#define AHB2_GRP1_PERIPH_RESET (LL_AHB2_GRP1_PERIPH_ALL)
#define AHB4_GRP1_PERIPH_RESET (LL_AHB4_GRP1_PERIPH_ALL)
#define APB1_GRP1_PERIPH_RESET (LL_APB1_GRP1_PERIPH_ALL &~ LL_APB1_GRP1_PERIPH_WWDG)
#define APB1_GRP2_PERIPH_RESET (LL_APB1_GRP2_PERIPH_ALL)
#define APB2_GRP1_PERIPH_RESET (LL_APB2_GRP1_PERIPH_ALL)
#define APB3_GRP1_PERIPH_RESET (LL_APB3_GRP1_PERIPH_ALL)
#define IS_TICK_FREQ(freq) (((freq) == HAL_TICK_FREQ_10HZ) \
                            || ((freq) == HAL_TICK_FREQ_100HZ) \
                            || ((freq) == HAL_TICK_FREQ_1KHZ))
#define IS_TICK_PRIO(prio) ((prio) <= ((1UL << __NVIC_PRIO_BITS) - 1UL))
#define USE_HAL_TICK_INT_PRIORITY HAL_TICK_INT_LOWEST_PRIORITY

hal_status_t HAL_Init(void)
{
#if defined(USE_HAL_FLASH_PREFETCH) && (USE_HAL_FLASH_PREFETCH == 1)
  /* Configure Flash prefetch */
  LL_FLASH_EnablePrefetch(FLASH);
#endif /* USE_HAL_FLASH_PREFETCH */

  /* Update the SystemCoreClock global variable */
  SystemCoreClock = HAL_RCC_GetSYSCLKFreq() >> AHBPrescTable[LL_RCC_GetAHBPrescaler()];


  /* Set the SysTick clock source to the CPU internal free running clock. */
  HAL_CORTEX_SYSTICK_SetClkSource(HAL_CORTEX_SYSTICK_CLKSOURCE_INTERNAL);

  HAL_CORTEX_NVIC_SetPriorityGrouping(HAL_CORTEX_NVIC_PRIORITY_GROUP_4);

  /* Update SystemCoreClock. */
  return HAL_UpdateCoreClock();
}

hal_status_t HAL_DeInit(void)
{
  /* Reset all peripherals (except system ones needed for code execution) */
  LL_AHB1_GRP1_ForceReset(AHB1_GRP1_PERIPH_RESET);
  LL_AHB2_GRP1_ForceReset(AHB2_GRP1_PERIPH_RESET);
#if defined(AHB4PERIPH_BASE)
  LL_AHB4_GRP1_ForceReset(AHB4_GRP1_PERIPH_RESET);
#endif /* defined(AHB4PERIPH_BASE) */
  LL_APB1_GRP1_ForceReset(APB1_GRP1_PERIPH_RESET);
  LL_APB1_GRP2_ForceReset(APB1_GRP2_PERIPH_RESET);
  LL_APB2_GRP1_ForceReset(APB2_GRP1_PERIPH_RESET);
  LL_APB3_GRP1_ForceReset(APB3_GRP1_PERIPH_RESET);

  LL_AHB1_GRP1_ReleaseReset(AHB1_GRP1_PERIPH_RESET);
  LL_AHB2_GRP1_ReleaseReset(AHB2_GRP1_PERIPH_RESET);
#if defined(AHB4PERIPH_BASE)
  LL_AHB4_GRP1_ReleaseReset(AHB4_GRP1_PERIPH_RESET);
#endif /* defined(AHB4PERIPH_BASE) */
  LL_APB1_GRP1_ReleaseReset(APB1_GRP1_PERIPH_RESET);
  LL_APB1_GRP2_ReleaseReset(APB1_GRP2_PERIPH_RESET);
  LL_APB2_GRP1_ReleaseReset(APB2_GRP1_PERIPH_RESET);
  LL_APB3_GRP1_ReleaseReset(APB3_GRP1_PERIPH_RESET);


  return HAL_OK;
}

__WEAK hal_status_t HAL_InitTick(hal_tick_freq_t tick_freq, uint32_t tick_priority)
{
  hal_status_t status = HAL_ERROR;

  ASSERT_DBG_PARAM(IS_TICK_FREQ(tick_freq));
  ASSERT_DBG_PARAM(IS_TICK_PRIO(tick_priority));

  /* Check uwTickFreq for MisraC 2012 (despite a variable of enum type that does not take value zero). */
  if ((uint32_t)uwTickFreq != 0U)
  {
    /* Note: Value "1000" to convert the SysTick frequency value to Hz. */
    if (HAL_CORTEX_SYSTICK_SetFreq(1000UL / (uint32_t)tick_freq) == HAL_OK)
    {
      uwTickFreq = tick_freq;

      HAL_CORTEX_NVIC_SetPriority(SysTick_IRQn, (hal_cortex_nvic_preemp_priority_t)tick_priority,
                                  (hal_cortex_nvic_sub_priority_t)0U);
      uwTickPrio = tick_priority;
      status = HAL_OK;
    }
  }

  return status;
}

__WEAK void HAL_SuspendTick(void)
{
  HAL_CORTEX_SYSTICK_Suspend();
}

__WEAK void HAL_ResumeTick(void)
{
  HAL_CORTEX_SYSTICK_Resume();
}
